feat: adopt parametric design tokens

--- a/docs/swatches/generated.adoc
+++ b/docs/swatches/generated.adoc
@@ -1,14 +1,14 @@
-image::docs/swatches/primary-500.svg[width=12,height=12] primary-500 (#F7A046/#C77817)
-image::docs/swatches/primary-300.svg[width=12,height=12] primary-300 (#FFD29C/#F7A046)
-image::docs/swatches/secondary-500.svg[width=12,height=12] secondary-500 (#F7A046/#C77817)
-image::docs/swatches/secondary-200.svg[width=12,height=12] secondary-200 (#FCE3C1/#F7A046)
-image::docs/swatches/accent-500.svg[width=12,height=12] accent-500 (#2ED3C6/#0F9487)
-image::docs/swatches/accent-200.svg[width=12,height=12] accent-200 (#C6F7F2/#2ED3C6)
-image::docs/swatches/success-500.svg[width=12,height=12] success-500 (#4CD293/#1B8A60)
-image::docs/swatches/warning-500.svg[width=12,height=12] warning-500 (#F7C544/#C98A17)
-image::docs/swatches/info-500.svg[width=12,height=12] info-500 (#6BB8FF/#1D5BBB)
-image::docs/swatches/destructive-500.svg[width=12,height=12] destructive-500 (#F05D66/#B32630)
-image::docs/swatches/neutral-900.svg[width=12,height=12] neutral-900 (#0F1424/#1C2335)
-image::docs/swatches/neutral-700.svg[width=12,height=12] neutral-700 (#1B2338/#2B3550)
-image::docs/swatches/neutral-200.svg[width=12,height=12] neutral-200 (#E6E9F5/#BCC4E0)
-image::docs/swatches/neutral-100.svg[width=12,height=12] neutral-100 (#F4F6FB/#E0E5F2)
+image::docs/swatches/primary-500.svg[width=12,height=12] primary-500 (#DC7300/#DC7300)
+image::docs/swatches/primary-300.svg[width=12,height=12] primary-300 (#EEC9A9/#EEC9A9)
+image::docs/swatches/secondary-500.svg[width=12,height=12] secondary-500 (#F3CDA3/#F3CDA3)
+image::docs/swatches/secondary-200.svg[width=12,height=12] secondary-200 (#FFEBD2/#FFEBD2)
+image::docs/swatches/accent-500.svg[width=12,height=12] accent-500 (#87D6E2/#87D6E2)
+image::docs/swatches/accent-200.svg[width=12,height=12] accent-200 (#C7EDF3/#C7EDF3)
+image::docs/swatches/success-500.svg[width=12,height=12] success-500 (#00C66D/#00C66D)
+image::docs/swatches/warning-500.svg[width=12,height=12] warning-500 (#FCAC00/#FCAC00)
+image::docs/swatches/info-500.svg[width=12,height=12] info-500 (#00BCFF/#00BCFF)
+image::docs/swatches/destructive-500.svg[width=12,height=12] destructive-500 (#E62B34/#E62B34)
+image::docs/swatches/neutral-900.svg[width=12,height=12] neutral-900 (#020713/#020713)
+image::docs/swatches/neutral-700.svg[width=12,height=12] neutral-700 (#1F2732/#1F2732)
+image::docs/swatches/neutral-200.svg[width=12,height=12] neutral-200 (#D3DCE7/#D3DCE7)
+image::docs/swatches/neutral-100.svg[width=12,height=12] neutral-100 (#F7FCFF/#F7FCFF)
